fix some spacing and make chips white

--- a/src/StudentDashboard.scss
+++ b/src/StudentDashboard.scss
@@ -18,6 +18,7 @@
 			display: flex;
 			flex-direction: column;
 			gap: 1rem;
+			padding-bottom: 1rem;
 		}
 	}
 
@@ -104,7 +105,7 @@
 		padding-left: 1.5rem;
 		padding-right: 1.5rem;
 		padding-top: 0.75rem;
-		padding-bottom: 0.75rem;
+		padding-bottom: 1rem;
 
 		font-size: 24px;
 		background-color: #E2E8F0;
@@ -112,6 +113,7 @@
 
 		display: flex;
 		flex-direction: column;
+		gap: 0.5rem;
 		&__datetime {
 			font-weight: 700;
 			display: flex;
